# safe-devicelocatorui

./: .gitignore  README.md
Backend/: Cargo.toml
Backend/src/: main.rs
Frontend/: .gitignore  README.md  pubspec.yaml
Frontend/lib/: main.dart
Frontend/linux/: CMakeLists.txt  my_application.cc
Frontend/test/: widget_test.dart
Frontend/web/: index.html  manifest.json
apptest/: ionic.config.json  package-lock.json  package.json
apptest/src/: App.tsx  index.tsx
backend/: Cargo.toml
backend/src/: main.rs
backend/src/city_api/: city_info.rs  mod.rs
backend/src/config/: config.rs  mod.rs
backend/src/controller/: mob.rs  sensorController.rs
backend/src/data/: data.rs  mod.rs
backend/src/map/: coordinates.rs  mod.rs  tiles.rs  utils.rs  zip.rs
backend/src/meta/: sensorResponse.rs
backend/src/model/: sensor.rs
documentation/: safe-devicelocatorui.aux  safe-devicelocatorui.fdb_latexmk  safe-devicelocatorui.fls  safe-devicelocatorui.tex
documentation/latex/: __latexindent_temp.bcf  __latexindent_temp.run.xml  __latexindent_temp.tex  safe-devicelocatorui.aux  safe-devicelocatorui.bbl  safe-devicelocatorui.bcf  safe-devicelocatorui.bib  safe-devicelocatorui.blg  safe-devicelocatorui.fdb_latexmk  safe-devicelocatorui.fls  safe-devicelocatorui.run.xml  safe-devicelocatorui.tex  (+1 more)
frontend/: .gitignore  capacitor.config.json  ionic.config.json  package-lock 2.json  package-lock.json  package.json  pubspec.yaml
mapDownloader/: Cargo.toml  mapDownloader.py
mapDownloader/src/: main.rs
map_downloader/: .gitignore  Cargo.toml
sensors/: sensors.json
(+145 files in other folders)
