[package]
name = "backend"
version = "0.1.0"
authors = ["Lorenzo Tanganelli <56673997+LorenzoTanga-bot@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11.2" }
tokio = { version = "1.4.0", features = ["full"] }
bytes = { version = "1", features = ["serde"]}
futures = { version = "0.3"}
directories = "3.0.1"
zip = "0.5.11"
walkdir = "2.3.2"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
confy = "0.4.0"