[package]
name = "mapDownloader"
version = "0.1.0"
authors = ["nico <nico.trionfetti@studenti.unicam.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["blocking"] }
image = "0.23"
tokio = { version = "1.4.0", features = ["full"] }
